src/main/c/frontend/syntactic-analysis/BisonParser.output
Terminals unused in grammar

    CLOSE_COMMENT
    OPEN_COMMENT
    IGNORED
    UNKNOWN
    RANDOM
    AGGRESSIVE
    COMMA
    OPEN_BRACKET
    CLOSE_BRACKET
    EQUAL


Grammar

    0 $accept: program $end

    1 program: expression
    2        | boardsim_program

    3 boardsim_program: board_decl
    4                 | cell_decl
    5                 | player_decl
    6                 | dice_decl
    7                 | simulate_block
    8                 | boardsim_program board_decl
    9                 | boardsim_program cell_decl
   10                 | boardsim_program player_decl
   11                 | boardsim_program dice_decl
   12                 | boardsim_program simulate_block

   13 board_decl: BOARD IDENTIFIER LOOP INTEGER SEMICOLON
   14           | BOARD IDENTIFIER GRAPH SEMICOLON

   15 cell_decl: CELL INTEGER STRING_LITERAL SEMICOLON
   16          | CELL INTEGER STRING_LITERAL COST INTEGER SEMICOLON
   17          | CELL INTEGER STRING_LITERAL COST INTEGER RENT INTEGER SEMICOLON

   18 player_decl: PLAYER INTEGER MONEY INTEGER POSITION INTEGER SEMICOLON
   19            | PLAYER INTEGER MONEY INTEGER POSITION INTEGER STRATEGY STRING_LITERAL SEMICOLON

   20 dice_decl: DICE INTEGER SIDES SEMICOLON

   21 simulate_block: SIMULATE INTEGER TURNS OPEN_BRACE CLOSE_BRACE
   22               | SIMULATE INTEGER TURNS OPEN_BRACE statements CLOSE_BRACE

   23 statements: statement
   24           | statements statement

   25 statement: PRINT STRING_LITERAL SEMICOLON
   26          | LOG STRING_LITERAL SEMICOLON
   27          | variable_decl
   28          | if_statement
   29          | loop_statement

   30 if_statement: IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE
   31             | IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE

   32 condition: IDENTIFIER
   33          | INTEGER
   34          | STRING_LITERAL
   35          | comparison_expression

   36 comparison_expression: IDENTIFIER GREATER_THAN INTEGER
   37                      | IDENTIFIER LESS_THAN INTEGER
   38                      | IDENTIFIER GREATER_EQUAL INTEGER
   39                      | IDENTIFIER LESS_EQUAL INTEGER
   40                      | IDENTIFIER EQUALITY INTEGER
   41                      | IDENTIFIER NOT_EQUAL INTEGER

   42 loop_statement: FOR IDENTIFIER IN INTEGER TO INTEGER OPEN_BRACE statements CLOSE_BRACE
   43               | WHILE OPEN_PARENTHESIS condition CLOSE_PARENTHESIS OPEN_BRACE statements CLOSE_BRACE

   44 variable_decl: INT IDENTIFIER EQUALS INTEGER SEMICOLON
   45              | STRING IDENTIFIER EQUALS STRING_LITERAL SEMICOLON
   46              | BOOL IDENTIFIER EQUALS IDENTIFIER SEMICOLON

   47 expression: expression ADD expression
   48           | expression DIV expression
   49           | expression MUL expression
   50           | expression SUB expression
   51           | factor

   52 factor: OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   53       | constant

   54 constant: INTEGER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <integer> (258) 13 15 16 17 18 19 20 21 22 33 36 37 38 39 40 41 42 44 54
    ADD <token> (259) 47
    CLOSE_BRACE <token> (260) 21 22 30 31 42 43
    CLOSE_COMMENT <token> (261)
    CLOSE_PARENTHESIS <token> (262) 30 31 43 52
    DIV <token> (263) 48
    MUL <token> (264) 49
    OPEN_BRACE <token> (265) 21 22 30 31 42 43
    OPEN_COMMENT <token> (266)
    OPEN_PARENTHESIS <token> (267) 30 31 43 52
    SUB <token> (268) 50
    LESS_THAN <token> (269) 37
    LESS_EQUAL <token> (270) 39
    GREATER_THAN <token> (271) 36
    GREATER_EQUAL <token> (272) 38
    NOT_EQUAL <token> (273) 41
    EQUALITY <token> (274) 40
    IGNORED <token> (275)
    UNKNOWN <token> (276)
    BOARD <token> (277) 13 14
    CELL <token> (278) 15 16 17
    LOOP <token> (279) 13
    GRAPH <token> (280) 14
    PLAYER <token> (281) 18 19
    DICE <token> (282) 20
    SIMULATE <token> (283) 21 22
    PRINT <token> (284) 25
    LOG <token> (285) 26
    INT <token> (286) 44
    STRING <token> (287) 45
    BOOL <token> (288) 46
    IF <token> (289) 30 31
    ELSE <token> (290) 31
    THEN <token> (291) 30 31
    FOR <token> (292) 42
    WHILE <token> (293) 43
    IN <token> (294) 42
    TURNS <token> (295) 21 22
    SIDES <token> (296) 20
    COST <token> (297) 16 17
    RENT <token> (298) 17
    MONEY <token> (299) 18 19
    POSITION <token> (300) 18 19
    TO <token> (301) 42
    STRATEGY <token> (302) 19
    RANDOM <token> (303)
    AGGRESSIVE <token> (304)
    SEMICOLON <token> (305) 13 14 15 16 17 18 19 20 25 26 44 45 46
    COMMA <token> (306)
    EQUALS <token> (307) 44 45 46
    IDENTIFIER <token> (308) 13 14 32 36 37 38 39 40 41 42 44 45 46
    STRING_LITERAL <token> (309) 15 16 17 19 25 26 34 45
    OPEN_BRACKET <token> (310)
    CLOSE_BRACKET <token> (311)
    EQUAL (312)


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    program <program> (59)
        on left: 1 2
        on right: 0
    boardsim_program <program> (60)
        on left: 3 4 5 6 7 8 9 10 11 12
        on right: 2 8 9 10 11 12
    board_decl <token> (61)
        on left: 13 14
        on right: 3 8
    cell_decl <token> (62)
        on left: 15 16 17
        on right: 4 9
    player_decl <token> (63)
        on left: 18 19
        on right: 5 10
    dice_decl <token> (64)
        on left: 20
        on right: 6 11
    simulate_block <token> (65)
        on left: 21 22
        on right: 7 12
    statements <token> (66)
        on left: 23 24
        on right: 22 24 30 31 42 43
    statement <token> (67)
        on left: 25 26 27 28 29
        on right: 23 24
    if_statement <token> (68)
        on left: 30 31
        on right: 28
    condition <token> (69)
        on left: 32 33 34 35
        on right: 30 31 43
    comparison_expression <token> (70)
        on left: 36 37 38 39 40 41
        on right: 35
    loop_statement <token> (71)
        on left: 42 43
        on right: 29
    variable_decl <token> (72)
        on left: 44 45 46
        on right: 27
    expression <expression> (73)
        on left: 47 48 49 50 51
        on right: 1 47 48 49 50 52
    factor <factor> (74)
        on left: 52 53
        on right: 51
    constant <constant> (75)
        on left: 54
        on right: 53


State 0

    0 $accept: • program $end

    INTEGER           shift, and go to state 1
    OPEN_PARENTHESIS  shift, and go to state 2
    BOARD             shift, and go to state 3
    CELL              shift, and go to state 4
    PLAYER            shift, and go to state 5
    DICE              shift, and go to state 6
    SIMULATE          shift, and go to state 7

    program           go to state 8
    boardsim_program  go to state 9
    board_decl        go to state 10
    cell_decl         go to state 11
    player_decl       go to state 12
    dice_decl         go to state 13
    simulate_block    go to state 14
    expression        go to state 15
    factor            go to state 16
    constant          go to state 17


State 1

   54 constant: INTEGER •

    $default  reduce using rule 54 (constant)


State 2

   52 factor: OPEN_PARENTHESIS • expression CLOSE_PARENTHESIS

    INTEGER           shift, and go to state 1
    OPEN_PARENTHESIS  shift, and go to state 2

    expression  go to state 18
    factor      go to state 16
    constant    go to state 17


State 3

   13 board_decl: BOARD • IDENTIFIER LOOP INTEGER SEMICOLON
   14           | BOARD • IDENTIFIER GRAPH SEMICOLON

    IDENTIFIER  shift, and go to state 19


State 4

   15 cell_decl: CELL • INTEGER STRING_LITERAL SEMICOLON
   16          | CELL • INTEGER STRING_LITERAL COST INTEGER SEMICOLON
   17          | CELL • INTEGER STRING_LITERAL COST INTEGER RENT INTEGER SEMICOLON

    INTEGER  shift, and go to state 20


State 5

   18 player_decl: PLAYER • INTEGER MONEY INTEGER POSITION INTEGER SEMICOLON
   19            | PLAYER • INTEGER MONEY INTEGER POSITION INTEGER STRATEGY STRING_LITERAL SEMICOLON

    INTEGER  shift, and go to state 21


State 6

   20 dice_decl: DICE • INTEGER SIDES SEMICOLON

    INTEGER  shift, and go to state 22


State 7

   21 simulate_block: SIMULATE • INTEGER TURNS OPEN_BRACE CLOSE_BRACE
   22               | SIMULATE • INTEGER TURNS OPEN_BRACE statements CLOSE_BRACE

    INTEGER  shift, and go to state 23


State 8

    0 $accept: program • $end

    $end  shift, and go to state 24


State 9

    2 program: boardsim_program •
    8 boardsim_program: boardsim_program • board_decl
    9                 | boardsim_program • cell_decl
   10                 | boardsim_program • player_decl
   11                 | boardsim_program • dice_decl
   12                 | boardsim_program • simulate_block

    BOARD     shift, and go to state 3
    CELL      shift, and go to state 4
    PLAYER    shift, and go to state 5
    DICE      shift, and go to state 6
    SIMULATE  shift, and go to state 7

    $default  reduce using rule 2 (program)

    board_decl      go to state 25
    cell_decl       go to state 26
    player_decl     go to state 27
    dice_decl       go to state 28
    simulate_block  go to state 29


State 10

    3 boardsim_program: board_decl •

    $default  reduce using rule 3 (boardsim_program)


State 11

    4 boardsim_program: cell_decl •

    $default  reduce using rule 4 (boardsim_program)


State 12

    5 boardsim_program: player_decl •

    $default  reduce using rule 5 (boardsim_program)


State 13

    6 boardsim_program: dice_decl •

    $default  reduce using rule 6 (boardsim_program)


State 14

    7 boardsim_program: simulate_block •

    $default  reduce using rule 7 (boardsim_program)


State 15

    1 program: expression •
   47 expression: expression • ADD expression
   48           | expression • DIV expression
   49           | expression • MUL expression
   50           | expression • SUB expression

    ADD  shift, and go to state 30
    DIV  shift, and go to state 31
    MUL  shift, and go to state 32
    SUB  shift, and go to state 33

    $default  reduce using rule 1 (program)


State 16

   51 expression: factor •

    $default  reduce using rule 51 (expression)


State 17

   53 factor: constant •

    $default  reduce using rule 53 (factor)


State 18

   47 expression: expression • ADD expression
   48           | expression • DIV expression
   49           | expression • MUL expression
   50           | expression • SUB expression
   52 factor: OPEN_PARENTHESIS expression • CLOSE_PARENTHESIS

    ADD                shift, and go to state 30
    CLOSE_PARENTHESIS  shift, and go to state 34
    DIV                shift, and go to state 31
    MUL                shift, and go to state 32
    SUB                shift, and go to state 33


State 19

   13 board_decl: BOARD IDENTIFIER • LOOP INTEGER SEMICOLON
   14           | BOARD IDENTIFIER • GRAPH SEMICOLON

    LOOP   shift, and go to state 35
    GRAPH  shift, and go to state 36


State 20

   15 cell_decl: CELL INTEGER • STRING_LITERAL SEMICOLON
   16          | CELL INTEGER • STRING_LITERAL COST INTEGER SEMICOLON
   17          | CELL INTEGER • STRING_LITERAL COST INTEGER RENT INTEGER SEMICOLON

    STRING_LITERAL  shift, and go to state 37


State 21

   18 player_decl: PLAYER INTEGER • MONEY INTEGER POSITION INTEGER SEMICOLON
   19            | PLAYER INTEGER • MONEY INTEGER POSITION INTEGER STRATEGY STRING_LITERAL SEMICOLON

    MONEY  shift, and go to state 38


State 22

   20 dice_decl: DICE INTEGER • SIDES SEMICOLON

    SIDES  shift, and go to state 39


State 23

   21 simulate_block: SIMULATE INTEGER • TURNS OPEN_BRACE CLOSE_BRACE
   22               | SIMULATE INTEGER • TURNS OPEN_BRACE statements CLOSE_BRACE

    TURNS  shift, and go to state 40


State 24

    0 $accept: program $end •

    $default  accept


State 25

    8 boardsim_program: boardsim_program board_decl •

    $default  reduce using rule 8 (boardsim_program)


State 26

    9 boardsim_program: boardsim_program cell_decl •

    $default  reduce using rule 9 (boardsim_program)


State 27

   10 boardsim_program: boardsim_program player_decl •

    $default  reduce using rule 10 (boardsim_program)


State 28

   11 boardsim_program: boardsim_program dice_decl •

    $default  reduce using rule 11 (boardsim_program)


State 29

   12 boardsim_program: boardsim_program simulate_block •

    $default  reduce using rule 12 (boardsim_program)


State 30

   47 expression: expression ADD • expression

    INTEGER           shift, and go to state 1
    OPEN_PARENTHESIS  shift, and go to state 2

    expression  go to state 41
    factor      go to state 16
    constant    go to state 17


State 31

   48 expression: expression DIV • expression

    INTEGER           shift, and go to state 1
    OPEN_PARENTHESIS  shift, and go to state 2

    expression  go to state 42
    factor      go to state 16
    constant    go to state 17


State 32

   49 expression: expression MUL • expression

    INTEGER           shift, and go to state 1
    OPEN_PARENTHESIS  shift, and go to state 2

    expression  go to state 43
    factor      go to state 16
    constant    go to state 17


State 33

   50 expression: expression SUB • expression

    INTEGER           shift, and go to state 1
    OPEN_PARENTHESIS  shift, and go to state 2

    expression  go to state 44
    factor      go to state 16
    constant    go to state 17


State 34

   52 factor: OPEN_PARENTHESIS expression CLOSE_PARENTHESIS •

    $default  reduce using rule 52 (factor)


State 35

   13 board_decl: BOARD IDENTIFIER LOOP • INTEGER SEMICOLON

    INTEGER  shift, and go to state 45


State 36

   14 board_decl: BOARD IDENTIFIER GRAPH • SEMICOLON

    SEMICOLON  shift, and go to state 46


State 37

   15 cell_decl: CELL INTEGER STRING_LITERAL • SEMICOLON
   16          | CELL INTEGER STRING_LITERAL • COST INTEGER SEMICOLON
   17          | CELL INTEGER STRING_LITERAL • COST INTEGER RENT INTEGER SEMICOLON

    COST       shift, and go to state 47
    SEMICOLON  shift, and go to state 48


State 38

   18 player_decl: PLAYER INTEGER MONEY • INTEGER POSITION INTEGER SEMICOLON
   19            | PLAYER INTEGER MONEY • INTEGER POSITION INTEGER STRATEGY STRING_LITERAL SEMICOLON

    INTEGER  shift, and go to state 49


State 39

   20 dice_decl: DICE INTEGER SIDES • SEMICOLON

    SEMICOLON  shift, and go to state 50


State 40

   21 simulate_block: SIMULATE INTEGER TURNS • OPEN_BRACE CLOSE_BRACE
   22               | SIMULATE INTEGER TURNS • OPEN_BRACE statements CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 51


State 41

   47 expression: expression • ADD expression
   47           | expression ADD expression •
   48           | expression • DIV expression
   49           | expression • MUL expression
   50           | expression • SUB expression

    DIV  shift, and go to state 31
    MUL  shift, and go to state 32

    $default  reduce using rule 47 (expression)


State 42

   47 expression: expression • ADD expression
   48           | expression • DIV expression
   48           | expression DIV expression •
   49           | expression • MUL expression
   50           | expression • SUB expression

    $default  reduce using rule 48 (expression)


State 43

   47 expression: expression • ADD expression
   48           | expression • DIV expression
   49           | expression • MUL expression
   49           | expression MUL expression •
   50           | expression • SUB expression

    $default  reduce using rule 49 (expression)


State 44

   47 expression: expression • ADD expression
   48           | expression • DIV expression
   49           | expression • MUL expression
   50           | expression • SUB expression
   50           | expression SUB expression •

    DIV  shift, and go to state 31
    MUL  shift, and go to state 32

    $default  reduce using rule 50 (expression)


State 45

   13 board_decl: BOARD IDENTIFIER LOOP INTEGER • SEMICOLON

    SEMICOLON  shift, and go to state 52


State 46

   14 board_decl: BOARD IDENTIFIER GRAPH SEMICOLON •

    $default  reduce using rule 14 (board_decl)


State 47

   16 cell_decl: CELL INTEGER STRING_LITERAL COST • INTEGER SEMICOLON
   17          | CELL INTEGER STRING_LITERAL COST • INTEGER RENT INTEGER SEMICOLON

    INTEGER  shift, and go to state 53


State 48

   15 cell_decl: CELL INTEGER STRING_LITERAL SEMICOLON •

    $default  reduce using rule 15 (cell_decl)


State 49

   18 player_decl: PLAYER INTEGER MONEY INTEGER • POSITION INTEGER SEMICOLON
   19            | PLAYER INTEGER MONEY INTEGER • POSITION INTEGER STRATEGY STRING_LITERAL SEMICOLON

    POSITION  shift, and go to state 54


State 50

   20 dice_decl: DICE INTEGER SIDES SEMICOLON •

    $default  reduce using rule 20 (dice_decl)


State 51

   21 simulate_block: SIMULATE INTEGER TURNS OPEN_BRACE • CLOSE_BRACE
   22               | SIMULATE INTEGER TURNS OPEN_BRACE • statements CLOSE_BRACE

    CLOSE_BRACE  shift, and go to state 55
    PRINT        shift, and go to state 56
    LOG          shift, and go to state 57
    INT          shift, and go to state 58
    STRING       shift, and go to state 59
    BOOL         shift, and go to state 60
    IF           shift, and go to state 61
    FOR          shift, and go to state 62
    WHILE        shift, and go to state 63

    statements      go to state 64
    statement       go to state 65
    if_statement    go to state 66
    loop_statement  go to state 67
    variable_decl   go to state 68


State 52

   13 board_decl: BOARD IDENTIFIER LOOP INTEGER SEMICOLON •

    $default  reduce using rule 13 (board_decl)


State 53

   16 cell_decl: CELL INTEGER STRING_LITERAL COST INTEGER • SEMICOLON
   17          | CELL INTEGER STRING_LITERAL COST INTEGER • RENT INTEGER SEMICOLON

    RENT       shift, and go to state 69
    SEMICOLON  shift, and go to state 70


State 54

   18 player_decl: PLAYER INTEGER MONEY INTEGER POSITION • INTEGER SEMICOLON
   19            | PLAYER INTEGER MONEY INTEGER POSITION • INTEGER STRATEGY STRING_LITERAL SEMICOLON

    INTEGER  shift, and go to state 71


State 55

   21 simulate_block: SIMULATE INTEGER TURNS OPEN_BRACE CLOSE_BRACE •

    $default  reduce using rule 21 (simulate_block)


State 56

   25 statement: PRINT • STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift, and go to state 72


State 57

   26 statement: LOG • STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift, and go to state 73


State 58

   44 variable_decl: INT • IDENTIFIER EQUALS INTEGER SEMICOLON

    IDENTIFIER  shift, and go to state 74


State 59

   45 variable_decl: STRING • IDENTIFIER EQUALS STRING_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 75


State 60

   46 variable_decl: BOOL • IDENTIFIER EQUALS IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 76


State 61

   30 if_statement: IF • OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE
   31             | IF • OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE

    OPEN_PARENTHESIS  shift, and go to state 77


State 62

   42 loop_statement: FOR • IDENTIFIER IN INTEGER TO INTEGER OPEN_BRACE statements CLOSE_BRACE

    IDENTIFIER  shift, and go to state 78


State 63

   43 loop_statement: WHILE • OPEN_PARENTHESIS condition CLOSE_PARENTHESIS OPEN_BRACE statements CLOSE_BRACE

    OPEN_PARENTHESIS  shift, and go to state 79


State 64

   22 simulate_block: SIMULATE INTEGER TURNS OPEN_BRACE statements • CLOSE_BRACE
   24 statements: statements • statement

    CLOSE_BRACE  shift, and go to state 80
    PRINT        shift, and go to state 56
    LOG          shift, and go to state 57
    INT          shift, and go to state 58
    STRING       shift, and go to state 59
    BOOL         shift, and go to state 60
    IF           shift, and go to state 61
    FOR          shift, and go to state 62
    WHILE        shift, and go to state 63

    statement       go to state 81
    if_statement    go to state 66
    loop_statement  go to state 67
    variable_decl   go to state 68


State 65

   23 statements: statement •

    $default  reduce using rule 23 (statements)


State 66

   28 statement: if_statement •

    $default  reduce using rule 28 (statement)


State 67

   29 statement: loop_statement •

    $default  reduce using rule 29 (statement)


State 68

   27 statement: variable_decl •

    $default  reduce using rule 27 (statement)


State 69

   17 cell_decl: CELL INTEGER STRING_LITERAL COST INTEGER RENT • INTEGER SEMICOLON

    INTEGER  shift, and go to state 82


State 70

   16 cell_decl: CELL INTEGER STRING_LITERAL COST INTEGER SEMICOLON •

    $default  reduce using rule 16 (cell_decl)


State 71

   18 player_decl: PLAYER INTEGER MONEY INTEGER POSITION INTEGER • SEMICOLON
   19            | PLAYER INTEGER MONEY INTEGER POSITION INTEGER • STRATEGY STRING_LITERAL SEMICOLON

    STRATEGY   shift, and go to state 83
    SEMICOLON  shift, and go to state 84


State 72

   25 statement: PRINT STRING_LITERAL • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 73

   26 statement: LOG STRING_LITERAL • SEMICOLON

    SEMICOLON  shift, and go to state 86


State 74

   44 variable_decl: INT IDENTIFIER • EQUALS INTEGER SEMICOLON

    EQUALS  shift, and go to state 87


State 75

   45 variable_decl: STRING IDENTIFIER • EQUALS STRING_LITERAL SEMICOLON

    EQUALS  shift, and go to state 88


State 76

   46 variable_decl: BOOL IDENTIFIER • EQUALS IDENTIFIER SEMICOLON

    EQUALS  shift, and go to state 89


State 77

   30 if_statement: IF OPEN_PARENTHESIS • condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE
   31             | IF OPEN_PARENTHESIS • condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE

    INTEGER         shift, and go to state 90
    IDENTIFIER      shift, and go to state 91
    STRING_LITERAL  shift, and go to state 92

    condition              go to state 93
    comparison_expression  go to state 94


State 78

   42 loop_statement: FOR IDENTIFIER • IN INTEGER TO INTEGER OPEN_BRACE statements CLOSE_BRACE

    IN  shift, and go to state 95


State 79

   43 loop_statement: WHILE OPEN_PARENTHESIS • condition CLOSE_PARENTHESIS OPEN_BRACE statements CLOSE_BRACE

    INTEGER         shift, and go to state 90
    IDENTIFIER      shift, and go to state 91
    STRING_LITERAL  shift, and go to state 92

    condition              go to state 96
    comparison_expression  go to state 94


State 80

   22 simulate_block: SIMULATE INTEGER TURNS OPEN_BRACE statements CLOSE_BRACE •

    $default  reduce using rule 22 (simulate_block)


State 81

   24 statements: statements statement •

    $default  reduce using rule 24 (statements)


State 82

   17 cell_decl: CELL INTEGER STRING_LITERAL COST INTEGER RENT INTEGER • SEMICOLON

    SEMICOLON  shift, and go to state 97


State 83

   19 player_decl: PLAYER INTEGER MONEY INTEGER POSITION INTEGER STRATEGY • STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift, and go to state 98


State 84

   18 player_decl: PLAYER INTEGER MONEY INTEGER POSITION INTEGER SEMICOLON •

    $default  reduce using rule 18 (player_decl)


State 85

   25 statement: PRINT STRING_LITERAL SEMICOLON •

    $default  reduce using rule 25 (statement)


State 86

   26 statement: LOG STRING_LITERAL SEMICOLON •

    $default  reduce using rule 26 (statement)


State 87

   44 variable_decl: INT IDENTIFIER EQUALS • INTEGER SEMICOLON

    INTEGER  shift, and go to state 99


State 88

   45 variable_decl: STRING IDENTIFIER EQUALS • STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift, and go to state 100


State 89

   46 variable_decl: BOOL IDENTIFIER EQUALS • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 101


State 90

   33 condition: INTEGER •

    $default  reduce using rule 33 (condition)


State 91

   32 condition: IDENTIFIER •
   36 comparison_expression: IDENTIFIER • GREATER_THAN INTEGER
   37                      | IDENTIFIER • LESS_THAN INTEGER
   38                      | IDENTIFIER • GREATER_EQUAL INTEGER
   39                      | IDENTIFIER • LESS_EQUAL INTEGER
   40                      | IDENTIFIER • EQUALITY INTEGER
   41                      | IDENTIFIER • NOT_EQUAL INTEGER

    LESS_THAN      shift, and go to state 102
    LESS_EQUAL     shift, and go to state 103
    GREATER_THAN   shift, and go to state 104
    GREATER_EQUAL  shift, and go to state 105
    NOT_EQUAL      shift, and go to state 106
    EQUALITY       shift, and go to state 107

    $default  reduce using rule 32 (condition)


State 92

   34 condition: STRING_LITERAL •

    $default  reduce using rule 34 (condition)


State 93

   30 if_statement: IF OPEN_PARENTHESIS condition • CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE
   31             | IF OPEN_PARENTHESIS condition • CLOSE_PARENTHESIS THEN OPEN_BRACE statements CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE

    CLOSE_PARENTHESIS  shift, and go to state 108


State 94

   35 condition: comparison_expression •

    $default  reduce using rule 35 (condition)


State 95

   42 loop_statement: FOR IDENTIFIER IN • INTEGER TO INTEGER OPEN_BRACE statements CLOSE_BRACE

    INTEGER  shift, and go to state 109


State 96

   43 loop_statement: WHILE OPEN_PARENTHESIS condition • CLOSE_PARENTHESIS OPEN_BRACE statements CLOSE_BRACE

    CLOSE_PARENTHESIS  shift, and go to state 110


State 97

   17 cell_decl: CELL INTEGER STRING_LITERAL COST INTEGER RENT INTEGER SEMICOLON •

    $default  reduce using rule 17 (cell_decl)


State 98

   19 player_decl: PLAYER INTEGER MONEY INTEGER POSITION INTEGER STRATEGY STRING_LITERAL • SEMICOLON

    SEMICOLON  shift, and go to state 111


State 99

   44 variable_decl: INT IDENTIFIER EQUALS INTEGER • SEMICOLON

    SEMICOLON  shift, and go to state 112


State 100

   45 variable_decl: STRING IDENTIFIER EQUALS STRING_LITERAL • SEMICOLON

    SEMICOLON  shift, and go to state 113


State 101

   46 variable_decl: BOOL IDENTIFIER EQUALS IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 114


State 102

   37 comparison_expression: IDENTIFIER LESS_THAN • INTEGER

    INTEGER  shift, and go to state 115


State 103

   39 comparison_expression: IDENTIFIER LESS_EQUAL • INTEGER

    INTEGER  shift, and go to state 116


State 104

   36 comparison_expression: IDENTIFIER GREATER_THAN • INTEGER

    INTEGER  shift, and go to state 117


State 105

   38 comparison_expression: IDENTIFIER GREATER_EQUAL • INTEGER

    INTEGER  shift, and go to state 118


State 106

   41 comparison_expression: IDENTIFIER NOT_EQUAL • INTEGER

    INTEGER  shift, and go to state 119


State 107

   40 comparison_expression: IDENTIFIER EQUALITY • INTEGER

    INTEGER  shift, and go to state 120


State 108

   30 if_statement: IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS • THEN OPEN_BRACE statements CLOSE_BRACE
   31             | IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS • THEN OPEN_BRACE statements CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE

    THEN  shift, and go to state 121


State 109

   42 loop_statement: FOR IDENTIFIER IN INTEGER • TO INTEGER OPEN_BRACE statements CLOSE_BRACE

    TO  shift, and go to state 122


State 110

   43 loop_statement: WHILE OPEN_PARENTHESIS condition CLOSE_PARENTHESIS • OPEN_BRACE statements CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 123


State 111

   19 player_decl: PLAYER INTEGER MONEY INTEGER POSITION INTEGER STRATEGY STRING_LITERAL SEMICOLON •

    $default  reduce using rule 19 (player_decl)


State 112

   44 variable_decl: INT IDENTIFIER EQUALS INTEGER SEMICOLON •

    $default  reduce using rule 44 (variable_decl)


State 113

   45 variable_decl: STRING IDENTIFIER EQUALS STRING_LITERAL SEMICOLON •

    $default  reduce using rule 45 (variable_decl)


State 114

   46 variable_decl: BOOL IDENTIFIER EQUALS IDENTIFIER SEMICOLON •

    $default  reduce using rule 46 (variable_decl)


State 115

   37 comparison_expression: IDENTIFIER LESS_THAN INTEGER •

    $default  reduce using rule 37 (comparison_expression)


State 116

   39 comparison_expression: IDENTIFIER LESS_EQUAL INTEGER •

    $default  reduce using rule 39 (comparison_expression)


State 117

   36 comparison_expression: IDENTIFIER GREATER_THAN INTEGER •

    $default  reduce using rule 36 (comparison_expression)


State 118

   38 comparison_expression: IDENTIFIER GREATER_EQUAL INTEGER •

    $default  reduce using rule 38 (comparison_expression)


State 119

   41 comparison_expression: IDENTIFIER NOT_EQUAL INTEGER •

    $default  reduce using rule 41 (comparison_expression)


State 120

   40 comparison_expression: IDENTIFIER EQUALITY INTEGER •

    $default  reduce using rule 40 (comparison_expression)


State 121

   30 if_statement: IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN • OPEN_BRACE statements CLOSE_BRACE
   31             | IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN • OPEN_BRACE statements CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 124


State 122

   42 loop_statement: FOR IDENTIFIER IN INTEGER TO • INTEGER OPEN_BRACE statements CLOSE_BRACE

    INTEGER  shift, and go to state 125


State 123

   43 loop_statement: WHILE OPEN_PARENTHESIS condition CLOSE_PARENTHESIS OPEN_BRACE • statements CLOSE_BRACE

    PRINT   shift, and go to state 56
    LOG     shift, and go to state 57
    INT     shift, and go to state 58
    STRING  shift, and go to state 59
    BOOL    shift, and go to state 60
    IF      shift, and go to state 61
    FOR     shift, and go to state 62
    WHILE   shift, and go to state 63

    statements      go to state 126
    statement       go to state 65
    if_statement    go to state 66
    loop_statement  go to state 67
    variable_decl   go to state 68


State 124

   30 if_statement: IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE • statements CLOSE_BRACE
   31             | IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE • statements CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE

    PRINT   shift, and go to state 56
    LOG     shift, and go to state 57
    INT     shift, and go to state 58
    STRING  shift, and go to state 59
    BOOL    shift, and go to state 60
    IF      shift, and go to state 61
    FOR     shift, and go to state 62
    WHILE   shift, and go to state 63

    statements      go to state 127
    statement       go to state 65
    if_statement    go to state 66
    loop_statement  go to state 67
    variable_decl   go to state 68


State 125

   42 loop_statement: FOR IDENTIFIER IN INTEGER TO INTEGER • OPEN_BRACE statements CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 128


State 126

   24 statements: statements • statement
   43 loop_statement: WHILE OPEN_PARENTHESIS condition CLOSE_PARENTHESIS OPEN_BRACE statements • CLOSE_BRACE

    CLOSE_BRACE  shift, and go to state 129
    PRINT        shift, and go to state 56
    LOG          shift, and go to state 57
    INT          shift, and go to state 58
    STRING       shift, and go to state 59
    BOOL         shift, and go to state 60
    IF           shift, and go to state 61
    FOR          shift, and go to state 62
    WHILE        shift, and go to state 63

    statement       go to state 81
    if_statement    go to state 66
    loop_statement  go to state 67
    variable_decl   go to state 68


State 127

   24 statements: statements • statement
   30 if_statement: IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements • CLOSE_BRACE
   31             | IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS THEN OPEN_BRACE statements • CLOSE_BRACE ELSE OPEN_BRACE statements CLOSE_BRACE
